FindBugs fixes, removal of StringFormat contents